# EDGAR

./: EDGAR.ipynb  Populations.xlsx  README.md  pyproject.toml
data/: CLASS.xlsx  EDGAR_2024_GHG_booklet_2024.xlsx
